# sylpheed-msg2clip

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  NEWS  README.en.txt  README.ja.txt  build.sh  configure.ac  cp2clip.c  msg2clip.c  msg2clip.h  page_save.xpm  ui.c  version.rc
doc/: README.ja.txt
po/: POTFILES.in  ja.po  msg2clip.pot
res/: version.rc
src/: Makefile.am  copying.h  msg2clip.c  msg2clip.h
